--- a/src/main/resources/templates/board/notice.html
+++ b/src/main/resources/templates/board/notice.html
@@ -92,6 +92,9 @@
                 </a>
                 <a class="truncate ps-1 text-xs font-normal custom-username"
                    th:href="@{'#'}" th:text="${board.users.username}"></a>
+                <span>·</span>
+                <span class="fw-medium"
+                      th:text="${dateFormatter.formatRegDate(board.regDate)}" style="font-size: 14px; color: grey;"></span>
             </div>
             <!-- 게시글 제목 -->
             <div class="my-2">
