profile 내 댓글 부분 추가, ui 변경

--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -94,7 +94,7 @@
         </button>
 
         <!-- Placeholder for comments; you can update these as necessary -->
-        <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
+        <button data-action-url="/profile/comments" class="btn btn-outline-light custom-hover profileButton">
           댓글
         </button>
 
