--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -513,14 +513,19 @@ F          OOO      OOO        TT     EEEEEEEE  RR   RRR
     <ul class="list-group">
       <li th:each="board, stat : ${paging}" class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2">
-          <a href="" th:href="@{|/${board.getCategory().toLowerCase()}/${board.getBid()}|}" class="link-dark link-underline-opacity-0
+          <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
+          <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
+          <a th:href="@{|/${board.getCategory().toLowerCase()}|}" class="link-blue link-underline-opacity-0
+            link-underline-opacity-50-hover text-decoration-none" th:text="${board.getCategory().toLowerCase()}"></a>
+          <span>카테고리에 게시글을 남겼어요!</span>
+          <div>
+            <a href="" th:href="@{|/${board.getCategory().toLowerCase()}/${board.getBid()}|}" class="link-dark link-underline-opacity-0
             link-underline-opacity-50-hover">
-            <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
-            <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
-            <span class="fw-bold" th:text="${board.getTitle}"></span>
-          </a>
+              <span class="fw-bold" th:text="${board.getTitle}"></span>
+            </a>
+          </div>
         </div>
-        <div class="d-flex">
+        <div class="d-flex mt-auto">
             <ul class="nav mb-2 mb-lg-0">
               <li class="nav-item">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5 me-1">
@@ -552,7 +557,7 @@ F          OOO      OOO        TT     EEEEEEEE  RR   RRR
           </div>
 
           <!-- 좋아요 수 -->
-          <div class="d-flex">
+          <div class="d-flex mt-auto">
               <ul class="nav mb-2 mb-lg-0">
                 <li class="nav-item">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke-width="0.3" stroke="currentColor" aria-hidden="true" viewBox="-3 -3 14 24" style="width: 22px; height: 22px;" class="h-5 w-5 me-1">
@@ -622,7 +627,129 @@ F          OOO      OOO        TT     EEEEEEEE  RR   RRR
 </div>
 
 <!--------------------------------------------------
-프로필에서 내 게시글 같은 버튼 눌르면 나오는 거
+프로필에서 내 게시글 같은 버튼 눌르면 나오는 거 - 즐겨찾기
+
+---------------------------------------------------->
+<div th:fragment="profile_get_data_favorites">
+  <div class="container w-75">
+    <hr/>
+    <ul class="list-group">
+      <li th:each="board, stat : ${paging}" class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2">
+          <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
+          <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
+          <a href="" class="link-blue link-underline-opacity-0 link-underline-opacity-50-hover text-decoration-none" th:text="${board.users.username}"></a>
+          <span>님의 게시글을 즐겨찾기에 추가했어요!</span>
+          <div>
+            <a href="" th:href="@{|/${board.getCategory().toLowerCase()}/${board.getBid()}|}" class="link-dark link-underline-opacity-0
+              link-underline-opacity-50-hover">
+                <span class="fw-bold" th:text="${board.getTitle}"></span>
+            </a>
+          </div>
+        </div>
+        <div class="d-flex mt-auto">
+          <ul class="nav mb-2 mb-lg-0">
+            <li class="nav-item">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5 me-1">
+                <!-- 아이콘 경로 -->
+                <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z"></path>
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+              </svg>
+            </li>
+            <li class="nav-item">
+              <span class="font-medium me-2" th:text="${board.hits}"></span>
+              <span class="sr-only"></span>
+            </li>
+          </ul>
+
+          <!-- 댓글 수 -->
+          <div class="d-flex mt-auto">
+            <ul class="nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5 me-1">
+                  <!-- 아이콘 경로 -->
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 01.778-.332 48.294 48.294 0 005.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"></path>
+                </svg>
+              </li>
+              <li class="nav-item">
+                <span class="font-medium" th:text="${board.reviewCnt}"></span>
+                <span class="sr-only"></span>
+              </li>
+            </ul>
+          </div>
+
+          <!-- 좋아요 수 -->
+          <div class="d-flex">
+            <ul class="nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke-width="0.3" stroke="currentColor" aria-hidden="true" viewBox="-3 -3 14 24" style="width: 22px; height: 22px;" class="h-5 w-5 me-1">
+                  <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
+                </svg>
+              </li>
+              <li class="nav-item">
+                <span class="font-medium" th:text="${board.likeCnt}"></span>
+                <span class="sr-only"></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!-- 페이징 처리 시작 -->
+  <div th:if="${!paging.isEmpty()}">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" th:classappend="${!paging.hasPrevious()} ? 'disabled'">
+        <a class="page-link" href="javascript:void(0)" th:data-page="${1}"> <!--  th:href="@{|?page=${1}|}" -->
+          <span>처음</span>
+        </a>
+      </li>
+      <li class="page-item" th:classappend="${!paging.hasPrevious()} ? 'disabled'">
+        <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number}">
+          <span>이전</span>
+        </a>
+      </li>
+      <!-- 4페이지 이상이면 1을 표시하고 5페이지 이상이면 그 옆에 ...을 표시함 -->
+      <li th:if="${paging.getNumber() >= 4}" class="page-item">           <!--  th:href="@{|?page=${1}|}" -->
+        <a th:text="${1}" class="page-link" href="javascript:void(0)" th:data-page="${1}"></a>
+      </li>
+      <li th:if="${paging.getNumber() >= 5}" class="page-item disabled">
+        <a class="page-link" tabindex="-1" aria-disabled="true">...</a>
+      </li>
+      <!-- 1부터 번호 생성, page에 값 넣음 -->
+      <!-- 현재 페이지 번호(paging.number)를 기준으로 앞 뒤로 2페이지와 4페이지 범위 내의 번호만 표시
+          예를 들면 현재 페이지가 5라면 3,4,5,6,7,8,9 가 표시 됨 -->
+      <!-- 그리고 현재 페이지(paging.number)가 page - 1과 같다면 클릭 못하게 함 -->
+      <li th:each="page: ${#numbers.sequence(1, paging.totalPages)}"
+          th:if="${page >= paging.number - 2 and page <= paging.number + 4}"
+          th:classappend="${page - 1 == paging.number} ? 'disabled'" class="page-item"> <!--  th:href="@{|?page=${page}|} -->
+        <a th:text="${page}" class="page-link" href="javascript:void(0)" th:data-page="${page}"></a>
+      </li>
+      <!-- 현재 페이지하고 끝 페이지의 간격이 5페이지 이상 있을 경우 마지막 페이지로의 링크를 표시하고
+          6페이지 이상 있을 경우 그 옆에 왼쪽에 ...을 붙임 -->
+      <li th:if="${paging.totalPages - paging.getNumber() >= 6}" class="page-item disabled">
+        <a class="page-link" tabindex="-1" aria-disabled="true">...</a>
+      </li>
+      <li th:if="${paging.totalPages - paging.getNumber() >= 5}" class="page-item">   <!--  th:href="@{|?page=${paging.totalPages}|} -->
+        <a th:text="${paging.totalPages}" class="page-link" href="javascript:void(0)" th:data-page="${paging.totalPages}"></a>
+      </li>
+      <li class="page-item" th:classappend="${!paging.hasNext()} ? 'disabled'">   <!--  th:href="@{|?page=${paging.number + 2}|} -->
+        <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number + 2}">
+          <span>다음</span>
+        </a>
+      </li>
+      <li class="page-item" th:classappend="${!paging.hasNext()} ? 'disabled'">   <!--  th:href="@{|?page=${paging.totalPages}|} -->
+        <a class="page-link" href="javascript:void(0)" th:data-page="${paging.totalPages}">
+          <span>마지막</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- 페이징 처리 끝 -->
+</div>
+
+<!--------------------------------------------------
+프로필에서 내 게시글 같은 버튼 눌르면 나오는 거 - 좋아요
 
 ---------------------------------------------------->
 <div th:fragment="profile_get_data_like">
@@ -631,17 +758,22 @@ F          OOO      OOO        TT     EEEEEEEE  RR   RRR
     <ul class="list-group">
       <li th:each="board, stat : ${paging}" class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2">
+          <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
+          <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
+          <a href="" class="link-dark link-underline-opacity-0 link-underline-opacity-50-hover" th:text="${board.boardDTO.users.username}"></a>
+          <span th:if="${board.likeStatus == 'LIKE'}">님의 게시글을 추천했어요!</span>
+          <span th:if="${board.likeStatus == 'DISLIKE'}">님의 게시글을 비추했어요!</span>
           <a href="" th:href="@{|/${board.boardDTO.getCategory().toLowerCase()}/${board.boardDTO.getBid()}|}" class="link-dark link-underline-opacity-0
             link-underline-opacity-50-hover">
-            <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
-            <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
-            <span class="fw-bold" th:text="${board.boardDTO.getTitle}"></span>
+            <div>
+              <span class="fw-bold" th:text="${board.boardDTO.getTitle}"></span>
+            </div>
           </a>
         </div>
 
 
 
-        <div class="d-flex">
+        <div class="d-flex mt-auto">
           <!-- 좋아요 눌렀으면 thumb_up 아니면 thumb_down -->
           <ul class="nav mb-2 mb-lg-0 mx-3">
             <li class="nav-item">
@@ -691,6 +823,96 @@ F          OOO      OOO        TT     EEEEEEEE  RR   RRR
               </li>
               <li class="nav-item">
                 <span class="font-medium" th:text="${board.boardDTO.likeCnt}"></span>
+                <span class="sr-only"></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <!-- 페이징 처리 시작 -->
+  <div th:if="${!paging.isEmpty()}">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" th:classappend="${!paging.hasPrevious()} ? 'disabled'">
+        <a class="page-link" href="javascript:void(0)" th:data-page="${1}"> <!--  th:href="@{|?page=${1}|}" -->
+          <span>처음</span>
+        </a>
+      </li>
+      <li class="page-item" th:classappend="${!paging.hasPrevious()} ? 'disabled'">
+        <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number}">
+          <span>이전</span>
+        </a>
+      </li>
+      <!-- 4페이지 이상이면 1을 표시하고 5페이지 이상이면 그 옆에 ...을 표시함 -->
+      <li th:if="${paging.getNumber() >= 4}" class="page-item">           <!--  th:href="@{|?page=${1}|}" -->
+        <a th:text="${1}" class="page-link" href="javascript:void(0)" th:data-page="${1}"></a>
+      </li>
+      <li th:if="${paging.getNumber() >= 5}" class="page-item disabled">
+        <a class="page-link" tabindex="-1" aria-disabled="true">...</a>
+      </li>
+      <!-- 1부터 번호 생성, page에 값 넣음 -->
+      <!-- 현재 페이지 번호(paging.number)를 기준으로 앞 뒤로 2페이지와 4페이지 범위 내의 번호만 표시
+          예를 들면 현재 페이지가 5라면 3,4,5,6,7,8,9 가 표시 됨 -->
+      <!-- 그리고 현재 페이지(paging.number)가 page - 1과 같다면 클릭 못하게 함 -->
+      <li th:each="page: ${#numbers.sequence(1, paging.totalPages)}"
+          th:if="${page >= paging.number - 2 and page <= paging.number + 4}"
+          th:classappend="${page - 1 == paging.number} ? 'disabled'" class="page-item"> <!--  th:href="@{|?page=${page}|} -->
+        <a th:text="${page}" class="page-link" href="javascript:void(0)" th:data-page="${page}"></a>
+      </li>
+      <!-- 현재 페이지하고 끝 페이지의 간격이 5페이지 이상 있을 경우 마지막 페이지로의 링크를 표시하고
+          6페이지 이상 있을 경우 그 옆에 왼쪽에 ...을 붙임 -->
+      <li th:if="${paging.totalPages - paging.getNumber() >= 6}" class="page-item disabled">
+        <a class="page-link" tabindex="-1" aria-disabled="true">...</a>
+      </li>
+      <li th:if="${paging.totalPages - paging.getNumber() >= 5}" class="page-item">   <!--  th:href="@{|?page=${paging.totalPages}|} -->
+        <a th:text="${paging.totalPages}" class="page-link" href="javascript:void(0)" th:data-page="${paging.totalPages}"></a>
+      </li>
+      <li class="page-item" th:classappend="${!paging.hasNext()} ? 'disabled'">   <!--  th:href="@{|?page=${paging.number + 2}|} -->
+        <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number + 2}">
+          <span>다음</span>
+        </a>
+      </li>
+      <li class="page-item" th:classappend="${!paging.hasNext()} ? 'disabled'">   <!--  th:href="@{|?page=${paging.totalPages}|} -->
+        <a class="page-link" href="javascript:void(0)" th:data-page="${paging.totalPages}">
+          <span>마지막</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- 페이징 처리 끝 -->
+</div>
+
+<!--------------------------------------------------
+프로필에서 내 게시글 같은 버튼 눌르면 나오는 거 - 댓글
+
+---------------------------------------------------->
+<div th:fragment="profile_get_data_comments">
+  <div class="container w-75">
+    <hr/>
+    <ul class="list-group">
+      <li th:each="comment, stat : ${paging}" class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2">
+          <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
+          <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
+          <a href="" th:href="@{|/${comment.boardDTOInComment.category.toLowerCase()}/${comment.boardDTOInComment.bid}|}" class="link-dark link-underline-opacity-0
+            link-underline-opacity-50-hover">
+            <span class="fw-bold" th:text="${comment.boardDTOInComment.title}"></span>
+          </a>
+          <span th:if="${comment.parent == null}"> 게시글에 댓글을 남겼어요!</span>
+          <span th:if="${comment.parent}"> 게시글에 대댓글을 남겼어요!</span>
+        </div>
+        <div class="d-flex">
+          <!-- 좋아요 수 -->
+          <div class="d-flex">
+            <ul class="nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke-width="0.3" stroke="currentColor" aria-hidden="true" viewBox="-3 -3 14 24" style="width: 22px; height: 22px;" class="h-5 w-5 me-1">
+                  <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
+                </svg>
+              </li>
+              <li class="nav-item">
+                <span class="font-medium" th:text="${comment.likeCnt}"></span>
                 <span class="sr-only"></span>
               </li>
             </ul>
