--- a/src/main/resources/templates/profile/profileMyFavorite.html
+++ b/src/main/resources/templates/profile/profileMyFavorite.html
@@ -52,7 +52,7 @@
                 </button>
 
                 <!-- Placeholder for comments; you can update these as necessary -->
-                <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
+                <button data-action-url="/profile/comments" class="btn btn-outline-light custom-hover profileButton">
                     댓글
                 </button>
 
@@ -71,12 +71,12 @@
                 <input type="hidden" id="actionUrl">
             </form>
         </div>
-        <div th:insert="~{fragments :: profile_get_data}"></div>
+        <div th:insert="~{fragments :: profile_get_data_favorites}"></div>
 
     </div>
 </div>
 <!-- 페이지 링크 누르면 페이지에 맞는 게시글 데이터 받아옴 -->
-<form th:action="@{/profile/posts}" method="get" id="pageForm">
+<form th:action="@{/profile/favorites}" method="get" id="pageForm">
     <input type="hidden" id="page" name="page" th:value="${paging.number}">
 </form>
 
