--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -93,7 +93,7 @@
           내 게시글
         </button>
 
-        <!-- Placeholder for comments; you can update these as necessary -->
+        <!-- For getting My Comments -->
         <button data-action-url="/profile/comments" class="btn btn-outline-light custom-hover profileButton">
           댓글
         </button>
@@ -103,9 +103,14 @@
           즐겨찾기
         </button>
 
-        <!-- coming soon -->
+        <!-- For getting My Likes -->
         <button data-action-url="/profile/likes" class="btn btn-outline-light custom-hover profileButton">
           좋아요
+        </button>
+
+        <!-- For getting My Activity History -->
+        <button data-action-url="/profile/activity" class="btn btn-outline-light custom-hover profileButton">
+          최근 활동
         </button>
       </div>
 
