--- a/src/main/resources/templates/profile/profileMyBoard.html
+++ b/src/main/resources/templates/profile/profileMyBoard.html
@@ -44,12 +44,12 @@
 
             <hr/>
             <div class="buttonMenu btn-group">
-                <!-- For getting My Board -->
+                <!-- Go to profile -->
                 <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
                     내 게시글
                 </button>
 
-                <!-- Placeholder for comments; you can update these as necessary -->
+                <!-- For getting My Comments -->
                 <button data-action-url="/profile/comments" class="btn btn-outline-light custom-hover profileButton">
                     댓글
                 </button>
@@ -59,9 +59,14 @@
                     즐겨찾기
                 </button>
 
-                <!-- coming soon -->
+                <!-- For getting My Likes -->
                 <button data-action-url="/profile/likes" class="btn btn-outline-light custom-hover profileButton">
                     좋아요
+                </button>
+
+                <!-- For getting My Activity History -->
+                <button data-action-url="/profile/activity" class="btn btn-outline-light custom-hover profileButton">
+                    최근 활동
                 </button>
             </div>
 
