--- a/src/main/resources/templates/profile/profileMyComment.html
+++ b/src/main/resources/templates/profile/profileMyComment.html
@@ -51,7 +51,7 @@
                     내 게시글
                 </button>
 
-                <!-- Placeholder for comments; you can update these as necessary -->
+                <!-- Go to profile -->
                 <button data-action-url="/profile" class="btn btn-outline-light custom-hover profileButton">
                     댓글
                 </button>
@@ -61,9 +61,14 @@
                     즐겨찾기
                 </button>
 
-                <!-- coming soon -->
+                <!-- For getting My Likes -->
                 <button data-action-url="/profile/likes" class="btn btn-outline-light custom-hover profileButton">
                     좋아요
+                </button>
+
+                <!-- For getting My Activity History -->
+                <button data-action-url="/profile/activity" class="btn btn-outline-light custom-hover profileButton">
+                    최근 활동
                 </button>
             </div>
         </div>
